Improved function to fetch PsInitialSystemProcess. Added qemu cmdline parsing to specify the vm name in a multi vm setup. Added cmdline argument to flow-cli for the vm name. Added machine type detection to qemu_procfs to determine how much of the address range is used for hardware devices

--- a/flow-cli/src/cli.yml
+++ b/flow-cli/src/cli.yml
@@ -9,6 +9,11 @@ args:
         long: connector
         help: selects the connector type (bridge, qemu_procfs)
         takes_value: true
+    - connector_args:
+        short: a
+        long: connector-args
+        help: additional arguments supplied to the connector
+        takes_value: true
     - url:
         long: url
         value_name: URL
