--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -25,6 +25,7 @@ rand = { version = "0.7.3" }
 
 [features]
 default = []
+trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["x86_64", "rand"]
 bridge = [] # enables the connector bridge (requires tokio)
 #emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
