added codecov workflow

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,7 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: codecov/codecov-action@v1
+    - name: Install kcov
+      run: sudo apt-get install kcov
+    - name: Install cargo-kcov
+      run: cargo install cargo-kcov
+    - name: Generate coverage report
+      run: cargo kcov --all
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./target/cov/merged-kcov-output/coverage.db
         fail_ci_if_error: false
