--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "flow-bench",
     "connectors/flow-qemu-procfs",
     #"connectors/flow-pcileech",
+    "nostd-test"
 ]
 default-members = [
     "flow-core",
