--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -6,19 +6,18 @@ edition = "2018"
 
 [dependencies]
 dataview = { version = "0.1", features = ["derive_pod"] }
-byteorder = "1.3.2"
-log = { version = "0.4.8", default-features = false }
-regex = "1.3.1"
+byteorder = { version = "1.3.2", default-features = false }
+log = "0.4.8"
 bitflags = "1.2.1"
-coarsetime = "0.1.13"
-smallvec = "1.4.0"
-either = "1.5.3"
+coarsetime = { version = "0.1.13", optional = true }
+smallvec = { version = "1.4.0", default-feature = false }
 #unicorn = { version = "0.9.1", optional = true }
-arrayvec = "0.5.1"
+arrayvec = { version = "0.5.1", default-features = false }
 x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
 rand = { version = "0.7.3", optional = true }
 rand_xorshift = { version = "0.2.0", optional = true }
 bumpalo = { version = "3.3.0", features = ["collections"] }
+no-std-compat = { version = "0.4.0", features = ["alloc"] }
 
 [dev-dependencies]
 x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
@@ -26,6 +25,9 @@ rand = { version = "0.7.3" }
 rand_xorshift = "0.2.0"
 
 [features]
-default = []
+default = ["std"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["x86_64", "rand", "rand_xorshift"]
+std = ["coarsetime", "no-std-compat/std"]
+collections = []
+alloc = []
