--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -9,18 +9,16 @@ flow-core = { path = "../flow-core" }
 log = { version = "0.4.8", default-features = false }
 byteorder = "1.3.2"
 dataview = "0.1"
-num = "0.2.0"
 pelite = { git = "https://github.com/ko1n/pelite" }
-scroll = "0.9"
-pretty-hex = "0.1.1"
-clap = "2.33.0"
 uuid = "0.8" # remove this if pelite has this built in
-duma = "0.1.0"
-dirs = "2.0.2"
-pdb = { git = "https://github.com/willglynn/pdb" }
-url = "2.1.0"
-failure = { version = "0.1.6", features = [] }
+pdb = "0.6.0"
 widestring = "0.4.0"
+
+# symbolstore
+dirs = "2.0.2"
+ureq = "1.2.0"
+cursive = { version = "0.15.0", optional = true }
+indicatif = { version = "0.15.0", optional = true }
 
 [dev_dependencies]
 simple_logger = "1.0.1"
@@ -28,6 +26,10 @@ flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
 win_key_codes = "0.1.2"
 rand = "0.5"
 bencher = "0.1.5"
+
+[features]
+default = ["download_progress"]
+download_progress = ["cursive", "indicatif"]
 
 [[example]]
 name = "read_keys"
