--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -10,7 +10,7 @@ byteorder = { version = "1.3.2", default-features = false }
 log = "0.4.8"
 bitflags = "1.2.1"
 coarsetime = { version = "0.1.13", optional = true }
-smallvec = { version = "1.4.0", default-feature = false }
+smallvec = { version = "1.4.0", default-features = false }
 #unicorn = { version = "0.9.1", optional = true }
 arrayvec = { version = "0.5.1", default-features = false }
 x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
