--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install libncurses-dev
+      - run: sudo apt-get install libncurses-dev libncursesw-dev
       - uses: actions/checkout@v2
       - name: Cache cargo build
         uses: actions/cache@v1
@@ -29,7 +29,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install libncurses-dev
+      - run: sudo apt-get install libncurses-dev libncursesw-dev
       - uses: actions/checkout@v2
       - name: Cache cargo build
         uses: actions/cache@v1
@@ -46,7 +46,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install libncurses-dev
+      - run: sudo apt-get install libncurses-dev libncursesw-dev
       - uses: actions/checkout@v2
       - name: Cache cargo build
         uses: actions/cache@v1
@@ -68,7 +68,7 @@ jobs:
   build-coverage:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install libncurses-dev
+      - run: sudo apt-get install libncurses-dev libncursesw-dev
       - uses: actions/checkout@v2
       - name: Set up Rust nightly
         uses: actions-rs/toolchain@v1
