--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -12,3 +12,4 @@ panic = "abort"
 
 [dependencies]
 flow-core = { path = "../flow-core/", default-features = false }
+flow-win32 = { path = "../flow-win32/", default-features = false }
