--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -5,19 +5,18 @@ authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 
 [dependencies]
-flow-core = { path = "../flow-core" }
+flow-core = { path = "../flow-core", default-features = false }
 log = { version = "0.4.8", default-features = false }
-byteorder = "1.3.2"
+byteorder = { version = "1.3.2", default-features = false }
 dataview = "0.1"
-pelite = { git = "https://github.com/ko1n/pelite" }
-uuid = "0.8" # remove this if pelite has this built in
-pdb = "0.6.0"
-widestring = "0.4.0"
+pelite = { git = "https://github.com/ko1n/pelite", default-features = false }
+widestring = { version = "0.4.0", default-features = false }
 no-std-compat = { version = "0.4.0", features = ["alloc"] }
 
 # symbolstore
-dirs = "2.0.2"
-ureq = "1.2.0"
+dirs = { version = "2.0.2", optional = true }
+ureq = { version = "1.2.0", optional = true }
+pdb = { version = "0.6.0", optional = true }
 cursive = { version = "0.15.0", optional = true }
 indicatif = { version = "0.15.0", optional = true }
 
@@ -29,11 +28,12 @@ rand = "0.5"
 bencher = "0.1.5"
 
 [features]
-default = ["std", "download_progress"]
+default = ["std", "download_progress", "symstore"]
 download_progress = ["cursive", "indicatif"]
 std = ["no-std-compat/std"]
 collections = []
 alloc = []
+symstore = ["dirs", "ureq", "pdb"]
 
 [[example]]
 name = "read_keys"
