--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -11,5 +11,5 @@ panic = "abort"
 panic = "abort"
 
 [dependencies]
-flow-core = { path = "../flow-core/", default-features = false }
+#flow-core = { path = "../flow-core/", default-features = false }
 flow-win32 = { path = "../flow-win32/", default-features = false }
