--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -10,7 +10,7 @@ log = { version = "0.4.8", default-features = false }
 byteorder = { version = "1.3.2", default-features = false }
 dataview = "0.1"
 pelite = { git = "https://github.com/ko1n/pelite", default-features = false }
-widestring = { version = "0.4.0", default-features = false }
+widestring = { version = "0.4.2", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4.0", features = ["alloc"] }
 
 # symbolstore
