--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     #"flow-ffi",
     "flow-bench",
     "connectors/flow-qemu-procfs",
-    #"connectors/flow-pcileech",
+    "connectors/flow-pcileech",
     #"nostd-test"
 ]
 default-members = [
