--- a/connectors/flow-pcileech/Cargo.toml
+++ b/connectors/flow-pcileech/Cargo.toml
@@ -9,6 +9,7 @@ flow-core = { path = "../../flow-core" }
 log = { version = "0.4.8", default-features = false }
 rusb = "0.6.0"
 dataview = "0.1"
+bitfield = "0.13.2"
 
 [dev-dependencies]
 clap = "2.33.0"
