added flow-pcileech as default workspace member

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ default-members = [
     "flow-core",
     "flow-win32",
     #"flow-ffi",
-    "flow-bench"
+    "flow-bench",
+    "connectors/flow-pcileech",
 ]
 
 exclude = [
