--- a/flow-bench/Cargo.toml
+++ b/flow-bench/Cargo.toml
@@ -17,7 +17,7 @@ rand = "0.5"
 flow-win32 = { path = "../flow-win32" }
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
-flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
+flow-connector = { package = "flow-qemu-procfs", path = "../connectors/flow-qemu-procfs" }
 
 [features]
 default = []
@@ -29,7 +29,6 @@ harness = false
 [[bench]]
 name = "read_win32"
 harness = false
-required-features = ["flow-qemu-procfs"]
 
 [[bench]]
 name = "batcher"
