Added coredump backend and implemented core dump x64 support
Former-commit-id: cf935a212937b800c03cc151a0716f32467e5453

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "flow-win32",
     #"flow-ffi",
     "flow-bench",
+    "connectors/flow-coredump",
     "connectors/flow-qemu-procfs",
     "connectors/flow-pcileech",
     #"nostd-test"
@@ -17,6 +18,7 @@ default-members = [
     "flow-win32",
     #"flow-ffi",
     "flow-bench",
+    "connectors/flow-coredump",
     "connectors/flow-pcileech",
 ]
 
