--- a/flow-ffi/Cargo.toml
+++ b/flow-ffi/Cargo.toml
@@ -11,8 +11,13 @@ crate-type = ["cdylib"]
 [dependencies]
 flow-core = { path = "../flow-core" }
 flow-win32 = { path = "../flow-win32" }
+flow-coredump = { path = "../connectors/flow-coredump" }
+
 log = "0.4.8"
 simple_logger = "1.0.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
+flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs", optional = true }
+
+[features]
+default = []
