Create separate mmap and stdio connectors. Make coredump use them.
Former-commit-id: d198cadf428f29cf5957339d7e3b412bc3f5e8be

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
     "connectors/flow-qemu-procfs",
     "connectors/flow-pcileech",
     "connectors/flow-kvm",
-    "connectors/flow-mmap"
+    "connectors/flow-mmap",
+    "connectors/flow-stdio",
     #"nostd-test"
 ]
 default-members = [
@@ -22,6 +23,8 @@ default-members = [
     "flow-bench",
     "connectors/flow-coredump",
     "connectors/flow-pcileech",
+    "connectors/flow-mmap",
+    "connectors/flow-stdio",
 ]
 
 exclude = [
