--- a/connectors/flow-coredump/Cargo.toml
+++ b/connectors/flow-coredump/Cargo.toml
@@ -8,15 +8,16 @@ edition = "2018"
 flow-core = { path = "../../flow-core" }
 log = { version = "0.4.8", default-features = false }
 dataview = "0.1"
-memmap = { version = "0.7", optional = true }
-
-[features]
-default = ["memmap"]
+flow-mmap = { path = "../flow-mmap/", features = ["filemap"], optional = true }
+flow-stdio = { path = "../flow-stdio/", optional = true }
 
 [dev-dependencies]
 flow-win32 = { path = "../../flow-win32" }
 clap = "2.33.0"
 simple_logger = "1.0.1"
+
+[features]
+default = ["flow-mmap"]
 
 [[example]]
 name = "read_coredump"
