--- a/connectors/flow-mmap/Cargo.toml
+++ b/connectors/flow-mmap/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 [dependencies]
 flow-core = { path = "../../flow-core" }
 log = { version = "0.4.8", default-features = false }
+memmap = { version = "0.7", optional = true }
+
+[features]
+default = ["filemap"]
+filemap = ["memmap"]
+
