--- a/connectors/flow-kvm/Cargo.toml
+++ b/connectors/flow-kvm/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+memflow-kvm-ioctl = { path = "../../../memflow-kvm-module/rust-bindings/" } #git = "https://github.com/memflow/memflow-kvm-module.git" }
+flow-core = { path = "../../flow-core/" }
+flow-mmap = { path = "../flow-mmap/", default-features = false }
+log = { version = "0.4.8", default-features = false }
