--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -24,6 +24,7 @@ bumpalo = { version = "3.4.0", features = ["collections"] }
 no-std-compat = { version = "0.4.0", features = ["alloc"] }
 itertools = { version = "0.9.0", default-features = false }
 vector-trees = { git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }
+memmap = { version = "0.7", optional = true }
 
 [dev-dependencies]
 x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
@@ -31,9 +32,10 @@ rand = { version = "0.7.3" }
 rand_xorshift = "0.2.0"
 
 [features]
-default = ["std"]
+default = ["std", "filemap"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["x86_64", "rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
+filemap = ["memmap"]
