Added plugin inventory, documentation and updated clippy lints
Former-commit-id: 74d6f6fdf83b9ec319d91ac1b42008a1d0971733

--- a/connectors/memflow-coredump/Cargo.toml
+++ b/connectors/memflow-coredump/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 crate-type = ["lib", "cdylib"]
 
 [dependencies]
-memflow-core = { path = "../../memflow-core", features = ["filemap"] }
+memflow-core = { path = "../../memflow-core", features = ["filemap", "plugins"] }
 memflow-derive = { path = "../../memflow-derive" }
 log = { version = "0.4.8", default-features = false }
 dataview = "0.1"
