Connectors now use new proc_macro
Former-commit-id: fdbc4346fde52b6059173b059abb8deec9e044b8

--- a/connectors/memflow-pcileech/Cargo.toml
+++ b/connectors/memflow-pcileech/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 
 [dependencies]
 memflow-core = { path = "../../memflow-core" }
+memflow-derive = { path = "../../memflow-derive" }
 log = { version = "0.4.8", default-features = false }
 rusb = "0.6.0"
 dataview = "0.1"
