--- a/connectors/memflow-kvm/Cargo.toml
+++ b/connectors/memflow-kvm/Cargo.toml
@@ -10,5 +10,6 @@ readme = "README.md"
 
 [dependencies]
 memflow-kvm-ioctl = { git = "ssh://git@github.com/memflow/memflow-kvm-module.git" }
-memflow-core = { path = "../../memflow-core/" }
+memflow-core = { path = "../../memflow-core" }
+memflow-derive = { path = "../../memflow-derive" }
 log = { version = "0.4.8", default-features = false }
