Builders now properly use the required mem parameter and enforce borrowing of the mem object. Builders now also work with unsized trait objects. The memflow_win32 examples now properly use the inventory to make them more universal.
Former-commit-id: 8f4e7f54a558342e31897a2855364eb0756a0d52

--- a/connectors/memflow-kvm/Cargo.toml
+++ b/connectors/memflow-kvm/Cargo.toml
@@ -8,6 +8,9 @@ homepage = "https://github.com/memflow/memflow"
 repository = "https://github.com/memflow/memflow"
 readme = "README.md"
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [dependencies]
 memflow-kvm-ioctl = { git = "ssh://git@github.com/memflow/memflow-kvm-module.git" }
 memflow-core = { path = "../../memflow-core" }
