--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -29,9 +29,7 @@ simple_logger = "1.0.1"
 win_key_codes = "0.1.2"
 rand = "0.5"
 bencher = "0.1.5"
-
-[target.'cfg(target_os = "linux")'.dev-dependencies]
-memflow-connector = { package = "memflow-qemu-procfs", path = "../connectors/memflow-qemu-procfs" }
+clap = "2.33.0"
 
 [features]
 default = ["std", "download_progress", "symstore"]
