--- a/connectors/memflow-kvm/Cargo.toml
+++ b/connectors/memflow-kvm/Cargo.toml
@@ -16,3 +16,7 @@ memflow-kvm-ioctl = { git = "ssh://git@github.com/memflow/memflow-kvm-module.git
 memflow-core = { path = "../../memflow-core" }
 memflow-derive = { path = "../../memflow-derive" }
 log = { version = "0.4.8", default-features = false }
+
+[features]
+default = []
+plugin = []
