--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -17,11 +17,8 @@ memflow-win32 = { path = "../memflow-win32" }
 
 [dev-dependencies]
 memflow-core = { path = "../memflow-core", features = ["dummy_mem"] }
-rand = "0.5"
 memflow-win32 = { path = "../memflow-win32" }
-
-[target.'cfg(target_os = "linux")'.dev-dependencies]
-memflow-qemu-procfs = { package = "memflow-qemu-procfs", path = "../connectors/memflow-qemu-procfs" }
+rand = "0.5"
 
 [features]
 default = []
@@ -30,9 +27,9 @@ default = []
 name = "read_dummy"
 harness = false
 
-[[bench]]
-name = "read_win32"
-harness = false
+#[[bench]]
+#name = "read_win32"
+#harness = false
 
 [[bench]]
 name = "batcher"
