Added new PartialRead/Write errors
Former-commit-id: cc78f9339556de276ecf5ae9ee3eb952b68d5487

--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -33,11 +33,11 @@ rand_xorshift = "0.2.0"
 memflow-derive = { path = "../memflow-derive" }
 
 [features]
-default = ["std", "filemap"]
+default = ["std", "plugins", "filemap"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["x86_64", "rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
-filemap = ["memmap"]
 plugins = ["libloading"]
+filemap = ["memmap"]
