--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -17,3 +17,6 @@ proc-macro2 = "1.0"
 syn = "1.0"
 quote = "1.0"
 darling = "0.10"
+
+[dev-dependencies]
+memflow-core = { path = "../memflow-core" }
