--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -20,8 +20,8 @@ no-std-compat = { version = "0.4.0", features = ["alloc"] }
 dirs = { version = "2.0.2", optional = true }
 ureq = { version = "1.2.0", optional = true }
 pdb = { version = "0.6.0", optional = true }
-cursive = { version = "0.15.0", optional = true }
-indicatif = { version = "0.15.0", optional = true }
+pbr = { version = "1.0", optional = true }
+progress-streams = { version = "1.1", optional = true }
 
 [dev_dependencies]
 simple_logger = "1.0.1"
@@ -31,12 +31,12 @@ bencher = "0.1.5"
 clap = "2.33.0"
 
 [features]
-default = ["std", "download_progress", "symstore"]
+default = ["std", "symstore", "download_progress"]
 std = ["no-std-compat/std"]
 collections = []
 alloc = []
-download_progress = ["cursive", "indicatif"]
 symstore = ["dirs", "ureq", "pdb"]
+download_progress = ["pbr", "progress-streams"]
 
 [[example]]
 name = "read_keys"
