--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -25,6 +25,7 @@ itertools = { version = "0.9.0", default-features = false }
 vector-trees = { git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }
 libloading = { version = "0.6", optional = true }
 memmap = { version = "0.7", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
@@ -33,11 +34,12 @@ rand_xorshift = "0.2.0"
 memflow-derive = { path = "../memflow-derive" }
 
 [features]
-default = ["std", "plugins", "filemap"]
+default = ["std", "serde_derive", "plugins", "filemap"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["x86_64", "rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
+serde_derive = ["serde"]
 plugins = ["libloading"]
 filemap = ["memmap"]
