Cleaned up no-std compilation path and transient features. Added info!() print when adding connectors
Former-commit-id: 35f5842dee03cfc7c0150603e52745e8dceb9f75

--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -34,7 +34,7 @@ toml = "0.5"
 
 [features]
 default = ["std", "serde_derive", "symstore", "download_progress"]
-std = ["no-std-compat/std"]
+std = ["no-std-compat/std", "memflow-core/std"]
 collections = []
 alloc = []
 serde_derive = ["serde", "memflow-core/serde_derive"]
