Made ConnectorArgs clonable. Removed Arc from MMap. Added ability to clone a ConnectorInstance

--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -55,5 +55,9 @@ name = "read_keys"
 path = "examples/read_keys.rs"
 
 [[example]]
+name = "multithreading"
+path = "examples/multithreading.rs"
+
+[[example]]
 name = "read_bench"
 path = "examples/read_bench.rs"
