Added section base address to ProcessInfo
Former-commit-id: dfe13c082d03c94aa81807221c7678977bdba648

--- a/memflow-win32/offsets/4_0_1381.toml
+++ b/memflow-win32/offsets/4_0_1381.toml
@@ -11,6 +11,7 @@ eproc_pid = 0x94
 eproc_name = 0x1dc
 eproc_peb = 0x18c
 eproc_thread_list = 0 #5.1+
+eproc_section_base = 0x190
 eproc_wow64 = 0 #5.0+
 
 kthread_teb = 0 #6.2+
