Added Win32ExitStatus to the process
Former-commit-id: a26f2747a293205ec99a32fca7a3ba43250a1d20

--- a/memflow-win32/offsets/10_0_18362_0AFB69F5FD264D54673570E37B38A3181.toml
+++ b/memflow-win32/offsets/10_0_18362_0AFB69F5FD264D54673570E37B38A3181.toml
@@ -12,6 +12,7 @@ eproc_pid = 744
 eproc_name = 1104
 eproc_peb = 1016
 eproc_thread_list = 1160
+eproc_exit_status = 0x0624
 eproc_section_base = 0x130
 eproc_wow64 = 1064
 kthread_teb = 240
