--- a/memflow-win32/offsets/10_0_19041_BBED7C2955FBE4522AAA23F4B8677AD91.toml
+++ b/memflow-win32/offsets/10_0_19041_BBED7C2955FBE4522AAA23F4B8677AD91.toml
@@ -12,10 +12,10 @@ eproc_pid = 1088
 eproc_name = 1448
 eproc_peb = 1360
 eproc_thread_list = 1504
+eproc_exit_status = 0x0624
 eproc_section_base = 0x130
 eproc_wow64 = 1408
 kthread_teb = 240
 ethread_list_entry = 1256
 teb_peb = 96
 teb_peb_x86 = 48
-
