--- a/memflow-win32/offsets/5_2_3790_82DCF67A38274C9CA99B60B421D2786D2.toml
+++ b/memflow-win32/offsets/5_2_3790_82DCF67A38274C9CA99B60B421D2786D2.toml
@@ -10,8 +10,9 @@ kproc_dtb = 40
 eproc_pid = 216
 eproc_name = 616
 eproc_peb = 704
-eproc_thread_list = 656
 eproc_section_base = 0x128
+eproc_exit_status = 0x024C
+eproc_thread_list = 656
 eproc_wow64 = 680
 kthread_teb = 176
 ethread_list_entry = 976
