Added generate offsets example and regenerated some of the baked offset
Former-commit-id: b44d80d323d1a28bf56a18fc727b29b5352add96

--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -51,6 +51,10 @@ name = "dump_offsets"
 path = "examples/dump_offsets.rs"
 
 [[example]]
+name = "generate_offsets"
+path = "examples/generate_offsets.rs"
+
+[[example]]
 name = "read_keys"
 path = "examples/read_keys.rs"
 
