--- a/memflow-win32/offsets/6_1_7601_684DA42A30CC450F81C535B4D18944B12.toml
+++ b/memflow-win32/offsets/6_1_7601_684DA42A30CC450F81C535B4D18944B12.toml
@@ -11,9 +11,9 @@ kproc_dtb = 24
 eproc_pid = 180
 eproc_name = 364
 eproc_peb = 424
+eproc_section_base = 300
+eproc_exit_status = 628
 eproc_thread_list = 392
-eproc_exit_status = 0x0444
-eproc_section_base = 0x12C
 eproc_wow64 = 0
 kthread_teb = 136
 ethread_list_entry = 616
