--- a/memflow-win32/offsets/10_0_18362_0AFB69F5FD264D54673570E37B38A3181.toml
+++ b/memflow-win32/offsets/10_0_18362_0AFB69F5FD264D54673570E37B38A3181.toml
@@ -11,9 +11,9 @@ kproc_dtb = 40
 eproc_pid = 744
 eproc_name = 1104
 eproc_peb = 1016
+eproc_section_base = 968
+eproc_exit_status = 1620
 eproc_thread_list = 1160
-eproc_exit_status = 0x0624
-eproc_section_base = 0x130
 eproc_wow64 = 1064
 kthread_teb = 240
 ethread_list_entry = 1720
