--- a/memflow-win32/offsets/10_0_19041_BBED7C2955FBE4522AAA23F4B8677AD91.toml
+++ b/memflow-win32/offsets/10_0_19041_BBED7C2955FBE4522AAA23F4B8677AD91.toml
@@ -11,9 +11,9 @@ kproc_dtb = 40
 eproc_pid = 1088
 eproc_name = 1448
 eproc_peb = 1360
+eproc_section_base = 1312
+eproc_exit_status = 2004
 eproc_thread_list = 1504
-eproc_exit_status = 0x0624
-eproc_section_base = 0x130
 eproc_wow64 = 1408
 kthread_teb = 240
 ethread_list_entry = 1256
