Added the same From implementations for native types to a PhysicalAddress as Address has
Former-commit-id: 26ac3eace1c3fc0530097864195185a736718c7f

--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -42,7 +42,7 @@ default = ["std", "serde_derive", "symstore", "download_progress"]
 std = ["no-std-compat/std", "memflow-core/std"]
 collections = []
 alloc = []
-serde_derive = ["serde", "memflow-core/serde_derive"]
+serde_derive = ["serde", "memflow-core/serde_derive", "pelite/serde"]
 symstore = ["dirs", "ureq", "pdb"]
 download_progress = ["pbr", "progress-streams"]
 
