Rework win32 offset store to be architecture aware, move architecture offsets into a dedicated structure
Former-commit-id: 11f69305ffcd9a5c8318ec53e4ed3f52963f1c56

--- a/memflow-win32/offsets/10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml
+++ b/memflow-win32/offsets/10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml
@@ -3,6 +3,7 @@ pdb_guid = '0AFB69F5FD264D54673570E37B38A3181'
 nt_major_version = 10
 nt_minor_version = 0
 nt_build_number = 18362
+arch = 'X64'
 
 [offsets]
 list_blink = 8
