--- a/memflow-win32/offsets/5_2_3790_X64_82DCF67A38274C9CA99B60B421D2786D2.toml
+++ b/memflow-win32/offsets/5_2_3790_X64_82DCF67A38274C9CA99B60B421D2786D2.toml
@@ -2,6 +2,7 @@ pdb_guid = '82DCF67A38274C9CA99B60B421D2786D2'
 nt_major_version = 5
 nt_minor_version = 2
 nt_build_number = 3790
+arch = 'X64'
 
 [offsets]
 list_blink = 8
