--- a/memflow-win32/offsets/10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml
+++ b/memflow-win32/offsets/10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml
@@ -3,6 +3,7 @@ pdb_guid = '1B1D6AA205E1C87DC63A314ACAA50B491'
 nt_major_version = 10
 nt_minor_version = 0
 nt_build_number = 19041
+arch = 'X86'
 
 [offsets]
 list_blink = 4
