--- a/memflow-win32/offsets/6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml
+++ b/memflow-win32/offsets/6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml
@@ -3,6 +3,7 @@ pdb_guid = '684DA42A30CC450F81C535B4D18944B12'
 nt_major_version = 6
 nt_minor_version = 1
 nt_build_number = 7601
+arch = 'X86'
 
 [offsets]
 list_blink = 4
