--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 memflow-core = { path = "../memflow-core", default-features = false }
 log = { version = "0.4.8", default-features = false }
 dataview = "0.1"
-pelite = { git = "https://github.com/ko1n/pelite", default-features = false }
+pelite = { git = "https://github.com/h33p/pelite", branch = "wrap", default-features = false }
 widestring = { version = "0.4.2", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4.0", features = ["alloc"] }
-serde = { version = "1.0", optional = true, features = ["derive"] }
+serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
 
 # symbolstore
 dirs = { version = "2.0.2", optional = true }
@@ -35,11 +35,12 @@ toml = "0.5"
 [build_dependencies]
 toml = "0.5"
 dataview = "0.1"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
 
 [features]
-default = ["std", "serde_derive", "symstore", "download_progress"]
+default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress"]
 std = ["no-std-compat/std", "memflow-core/std"]
+embed_offsets = ["serde_derive"]
 collections = []
 alloc = []
 serde_derive = ["serde", "memflow-core/serde_derive", "pelite/serde"]
