--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -16,5 +16,4 @@ uefi = "0.5.0"
 uefi-services = "0.2.5"
 log = "0.4"
 memflow-core = { path = "../memflow-core/", default-features = false }
-memflow-win32 = { path = "../memflow-win32/", default-features = false }
-serde = { version = "1.0", default-features = false }
+memflow-win32 = { path = "../memflow-win32/", default-features = false, features = ["embed_offsets"] }
