Add missing rust-src component.
Former-commit-id: 38250be4d265df876679279af74ab89d3590ee8d

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
+      - run: rustup +nightly component add rust-src
       - name: Build no_std crate
         run: cd nostd-test; cargo build --all-features --verbose
 
