More FFI work, connector version bump
Former-commit-id: c0375494a0d8c7c7aed84f0bf8bab30faa97a91b

--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 
 [lib]
 name = "memflow_ffi"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 memflow-core = { path = "../memflow-core" }
