--- a/memflow-ffi/cbindgen.toml
+++ b/memflow-ffi/cbindgen.toml
@@ -5,13 +5,16 @@ namespace = "memflow_core"
 tab_width = 4
 documentation_style = "doxy"
 style = "both"
-no_includes = true
+#no_includes = true
 cpp_compat = true
 
 [parse]
 parse_deps = true
 
 include = ["memflow-core"]
+
+[macro_expansion]
+bitflags = true
 
 [fn]
 sort_by = "None"
