Move memflow-ffi to memflow-core-ffi, change architecture docs a little bit
Former-commit-id: cbd4ee18b5e4749eea93f6b5960fc4c0485f4822

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ debug = true
 members = [
     "memflow-core",
     "memflow-win32",
-    "memflow-ffi",
+    "memflow-core-ffi",
     "memflow-bench",
-    #"nostd-test"
 ]
 default-members = [
     "memflow-core",
     "memflow-win32",
-    "memflow-ffi",
+    "memflow-core-ffi",
     "memflow-bench",
 ]
 
