Work on win32 ffi
Former-commit-id: 9d29bec455701ebaf7a23894f53367bf3da40ead

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ members = [
     "memflow-core",
     "memflow-win32",
     "memflow-core-ffi",
+    "memflow-win32-ffi",
     "memflow-bench",
 ]
 default-members = [
     "memflow-core",
     "memflow-win32",
     "memflow-core-ffi",
+    "memflow-win32-ffi",
     "memflow-bench",
 ]
 
