More win32 FFI coverage. Map almost entirety of memflow-win32::win32 module
Former-commit-id: babfa44bbbfb668bf9665503b1b47a0a654d608e

--- a/memflow-win32-ffi/cbindgen.toml
+++ b/memflow-win32-ffi/cbindgen.toml
@@ -11,7 +11,7 @@ includes = ["memflow_core.h"]
 [parse]
 parse_deps = true
 
-include = ["memflow-win32"]
+include = ["memflow-win32", "memflow-core"]
 
 [macro_expansion]
 bitflags = true
