--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,10 @@ env:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - run: sudo apt-get install libncurses-dev libncursesw5-dev
       - uses: actions/checkout@v2
@@ -18,7 +21,10 @@ jobs:
         run: cargo build --workspace --all-features --examples --verbose
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - run: sudo apt-get install libncurses-dev libncursesw5-dev
       - uses: actions/checkout@v2
@@ -39,7 +45,10 @@ jobs:
           args: --all-targets --all-features
 
   build-nostd:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - run: sudo apt-get install libncurses-dev libncursesw5-dev
       - uses: actions/checkout@v2
